Fixed some language to make it more convo friendly.

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@ layout: default
 
 <h2 id="why-this-was-created">Why this was created</h2>
 
-<p>In the summer of 2016, someone whom I considered an ally stood by and watched as I was berated by a racist. In fact, I had just had a powerful conversation with this individual about the power that privileged allies can wield in situations of discrimination. I trusted this person and felt that, in my time of need, they were not there for me. In fact, they turned their head away, as if they didn’t know me.</p>
+<p>In the summer of 2016, someone whom I considered an ally stood by and watched as I was berated by a racist. In fact, I had just had a powerful conversation with this individual about the power that privileged allies can wield in situations of discrimination. I trusted this person and felt that, in my time of need, they weren’t there for me. In fact, they turned their head away, as if they didn’t know me.</p>
 
-<p>Upset, I could not understand what had happened. Did the conversation we had prior not get through? Why didn’t this person take action? Then it dawned on me:</p>
+<p>Upset, I couldn’t understand what had happened. Did the conversation we had prior not get through? Why didn’t this person take action? Then it dawned on me:</p>
 
 <p><strong><em>Saying</em> that you are an ally is much easier than <em>being</em> a good ally.</strong></p>
 
