--- a/index.html
+++ b/index.html
@@ -104,15 +104,12 @@ layout: default
 
 <hr>
 
-<h2 id="how-to-handle-mistakes">Boots &amp; Sandles: How to handle mistakes</h2>
+<h2 id="how-to-handle-mistakes" style="margin-bottom: 10px;" >Boots &amp; Sandles: How to handle mistakes</h2>
 <em>Contributed by <a href="https://github.com/presleyp">@presleyp</a></em>
 
-<p>While mistakes are to be expected, what’s the best way to go about resolving them?</p>
+<p><strong>Note:</strong> Parts of this section were originally based on Kayla Reed’s (<a href="https://twitter.com/RE_invent_ED" target="_blank">@RE_invent_ED</a>) <a href=https://twitter.com/RE_invent_ED/status/742243143030972416" target="_blank">tweet</a> that defines how she views what it means to be an ally.</a></p>
 
-
-<p><strong>Note:</strong> Parts of this section were originally based on
-<a href="https://twitter.com/RE_invent_ED/status/742243143030972416" target="_blank">Kayla Reed’s (<a href="https://twitter.com/RE_invent_ED" target="_blank">@RE_invent_ED</a>) tweet that defines how she views what it means to be an ally.</a> -
-  it’s a great definition and should help you follow along!</p>
+<p>While mistakes are to be expected, what’s the best way to go about resolving them? Let’s start with an exercise.</p>
 
 <p>Imagine your privilege is a heavy boot that keeps you from feeling when you’re stepping on someone’s feet or they’re stepping on yours, while oppressed people have only sandals. “Ouch! You’re stepping on my toes!” How do you react?</p>
 
