--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ layout: default
 <h2 id="how-to-handle-mistakes" style="margin-bottom: 10px;" >Boots &amp; Sandles: How to handle mistakes</h2>
 <em>Contributed by <a href="https://github.com/presleyp">@presleyp</a></em>
 
-<p><strong>Note:</strong> Parts of this section were originally based on Kayla Reed’s (<a href="https://twitter.com/RE_invent_ED" target="_blank">@RE_invent_ED</a>) <a href=https://twitter.com/RE_invent_ED/status/742243143030972416" target="_blank">tweet</a> that defines how she views what it means to be an ally.</a></p>
+<p style="margin-top: 30px;"><strong>Note:</strong> <em>Parts of this section were originally based on Kayla Reed’s (<a href="https://twitter.com/RE_invent_ED" target="_blank">@RE_invent_ED</a>) <a href=https://twitter.com/RE_invent_ED/status/742243143030972416" target="_blank">tweet</a> that defines how she views what it means to be an ally.</a></em></p>
 
 <p>While mistakes are to be expected, what’s the best way to go about resolving them? Let’s start with an exercise.</p>
 
